--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -32,7 +32,36 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+.Home-grid-container {
+  display: grid;
+  width: 100%;
+  height: 500px;
+  grid-template-columns: 25% 50% 25%;
+  gap: 10px;
+}
+
+.Home-navigation {
+  background-color: #D9D9D9;
+  line-height: 50px
+}
+
+.Home-tweet-input {
+  background-color: #ABD9E4;
+  margin-bottom: 10px;
+  height: 30%;
+}
+
+.Home-tweet-feed {
+  background-color: #D9D9D9;
+  height: 68%;
+}
+
+.Home-news {
+  background-color: #D9D9D9;
 }
