added contact viewpage

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -65,3 +65,15 @@
 .Home-news {
   background-color: #D9D9D9;
 }
+
+.smallBox {
+  width: 500px;
+}
+
+#nameBox {
+  width: 200px;
+}
+
+#questionArea {
+  padding-left: 14%;
+}
