--- a/frontend/src/CSS/Messages.css
+++ b/frontend/src/CSS/Messages.css
@@ -18,5 +18,12 @@
 
 .text {
     background-color: #ABD9E4;
+    height: 90%;
     line-height: 50px
+    text-align = center;
   }
+
+.message-input {
+  width: 100%;
+  height: 8%;
+}
