added Inbox page

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -70,6 +70,16 @@
   width: 500px;
 }
 
+.inbox-Area {
+  border: 2px solid #dedede;
+  background-color: #f1f1f1;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 10px 0;
+  width: 500px;
+  height: 250px;
+}
+
 #nameBox {
   width: 200px;
 }
