--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -77,3 +77,19 @@
 #questionArea {
   padding-left: 14%;
 } */
+
+
+/* -------------------------------------------
+
+/* body {
+  --chirp-color: #e3c605;
+  --chirp-background: #042135;
+}
+
+.app {
+  display: flex;
+  height: 100vh;
+  max-width: 1300px;
+  margin-left: auto;
+  margin-right: auto;
+} */
