--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -79,14 +79,14 @@
 } */
 
 
-/* -------------------------------------------
 
-/* body {
+
+body {
   --chirp-color: #e3c605;
-  --chirp-background: #042135;
+  --chirp-background: #dcdcdc;
 }
 
-.app {
+/* .app {
   display: flex;
   height: 100vh;
   max-width: 1300px;
