--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -86,10 +86,11 @@ body {
   --chirp-background: #dcdcdc;
 }
 
-/* .app {
+.app {
   display: flex;
   height: 100vh;
   max-width: 1300px;
   margin-left: auto;
   margin-right: auto;
-} */
+  padding: 0 10px;
+} 
