--- a/frontend/src/CSS/Navbar.css
+++ b/frontend/src/CSS/Navbar.css
@@ -1,6 +1,16 @@
+.navbar {
+    border-right: 1px solid var(--chirp-background);
+    flex: 0.3;
+    min-width: 250px;
+    margin-top: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
 .navbar__tweet {
     align-items: flex;
-    margin-left: 30px;
+    margin-left: auto;
+    margin-right: auto;
     background-color: var(--chirp-color);
     border: none;
     color: white;
