--- a/frontend/src/CSS/Feed.css
+++ b/frontend/src/CSS/Feed.css
@@ -24,6 +24,7 @@
     z-index: 100;
     border: 1px solid var(--chirp-background);
     padding: 15px 20px;
+    max-width: 80;
 }
 
 .feed_header > h2 {
