--- a/frontend/src/CSS/TweetBox.css
+++ b/frontend/src/CSS/TweetBox.css
@@ -4,7 +4,7 @@
 
 .tweetBox {
     padding-bottom: 10px;
-    border-bottom: 8px solid var(--twitter-background);
+    border-bottom: 8px solid var(--chirp-background);
     padding-right: 10px;
   }
   
