--- a/frontend/src/CSS/Feed.css
+++ b/frontend/src/CSS/Feed.css
@@ -1,7 +1,7 @@
 .feed {
-    flex: 0.4;
+    flex: 0.5;
     border-right: 1px solid var(--chirp-background);
-    min-width: fit-content;
+    max-width: fit-content; /* change back to min if code is broken */
     overflow-y: scroll;
 }
 
@@ -24,7 +24,6 @@
     z-index: 100;
     border: 1px solid var(--chirp-background);
     padding: 15px 20px;
-    max-width: 80;
 }
 
 .feed_header > h2 {
