--- a/frontend/src/CSS/Post.css
+++ b/frontend/src/CSS/Post.css
@@ -31,6 +31,11 @@
     padding-bottom: 10px;
 }
 
+.post_profile > img {
+    max-width: 40px;
+    padding: 10px;
+}
+
 .post_body {
     flex: 1;
     padding: 10px;
