--- a/frontend/src/CSS/Widgets.css
+++ b/frontend/src/CSS/Widgets.css
@@ -1,3 +1,43 @@
+#search_icon {
+    max-width: 20px;
+    padding-right: 10px;
+}
+
+
 .widgets {
     flex: 0.3;
+    max-width: 30%;
 }
+
+.widgets__input {
+    display: flex;
+    align-items: center;
+    background-color: var(--chirp-background);
+    padding: 10px;
+    border-radius: 20px;
+    margin-top: 10px;
+    margin-left: 20px;
+  }
+  
+  .widgets__input > input {
+    border: none;
+    background-color: var(--chirp-background);
+  }
+  
+  .widgets__widgetContainer {
+    margin-top: 15px;
+    margin-left: 20px;
+    padding: 20px;
+    background-color: #f5f8fa;
+    border-radius: 20px;
+  }
+  
+  .widgets__widgetContainer > h2 {
+    font-size: 18px;
+    font-weight: 800;
+  }
+
+ .ShareButtonSpacing {
+    padding-top: 10px;
+ }
+
