--- a/frontend/src/CSS/Post.css
+++ b/frontend/src/CSS/Post.css
@@ -32,8 +32,12 @@
 }
 
 .post_profile > img {
-    max-width: 40px;
+    width: 40px;
+    height: 40px;
     padding: 10px;
+    border-radius: 50%;
+    
+    
 }
 
 .post_body {
